sort.basic.bubble.AlgBubbleSort2.scala.error
Erreur de compilation :
AlgBubbleSort2:7: error: value update is not a member of Int
  getNombreValeurs()=N  
  ^AlgBubbleSort2:7: error: not found: value N
  getNombreValeurs()=N  
                     ^AlgBubbleSort2:8: error: not found: value N
  for (k<- 0 to N-2){
                ^AlgBubbleSort2:12: error: not found: value N
      N=N-1
      ^