sort.basic.bubble.AlgBubbleSort2.scala.code
var Fin:Boolean=true
def bubbleSort2()  {
  
  while (Fin==true){
  Fin=false
  getNombreValeurs()=N  
  for (k<- 0 to N-2){
    
    if ( plusPetit(k,k+1)==false){
      echange(k,k+1)
      N=N-1
      Fin=true
       }
  }
 }
}